--- a/src/plugin.html
+++ b/src/plugin.html
@@ -1,11 +1,184 @@
 <plugin>
-    <b>This plugin will rock</b>
-
     <script>
-        console.log('I am mounted to the page');
+        import { map } from '@windy/map';
+        import findFleetBounds from './find_fleet_bounds.mjs';
 
-        this.onopen = () => console.log('I am opened');
+        const TRAIL_COLORS = [
+            '#FD6319',
+            '#12939A',
+            '#DDB27C',
+            '#88572C',
+            '#FF991F',
+            '#223F9A',
+            '#DA70BF',
+            '#125C77',
+            '#4DC19C',
+            '#776E57',
+            '#17B8BE',
+            '#F6D18A',
+            '#B7885E',
+            '#FFCB99',
+            '#F89570',
+            '#829AE3',
+            '#E79FD5',
+            '#1E96BE',
+            '#89DAC1',
+            '#B3AD9E',
+        ];
 
-        this.onclose = () => console.log('I am being closed');
+        const getColorFromId = id => TRAIL_COLORS[id % TRAIL_COLORS.length];
+
+        const LIVE_EVENT_URL = 'https://api.sail.cloud:443/rest/rpc/pos_maps_live_event';
+        const onTouchDevice = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+
+        map.options.minZoom = 3;
+        map.options.maxZoom = 17;
+
+        L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner-lines/{z}/{x}/{y}.png', {
+            attribution:
+                'Map tiles by Stamen Design, under CC BY 3.0. Data by OpenStreetMap, under ODbL.',
+            minZoom: 12,
+            maxZoom: 17,
+        }).addTo(map);
+        L.tileLayer('http://t1.openseamap.org/seamark/{z}/{x}/{y}.png').addTo(map);
+
+        let markers = [],
+            lines = [];
+
+        const fetchData = async eventSlug => {
+            const response = await fetch(LIVE_EVENT_URL, {
+                method: 'POST',
+                headers: {
+                    Accept: 'application/json',
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                    e_slug: eventSlug,
+                }),
+            });
+            const boatsDataDto = await response.json();
+            return boatsDataDto.map(boatDto => ({
+                name: boatDto.boat_name,
+                skipper_name: boatDto.skipper_name,
+                positions: boatDto.marker_info.map((marker, index) => ({
+                    ...marker,
+                    lat: boatDto.path[index][1],
+                    lon: boatDto.path[index][0],
+                })),
+                category_name: boatDto.category_name,
+            }));
+        };
+
+        const load = () => {
+            fetchData('bfb19e1d-2e76-4c61-8d00-1bedd1ac7d4b')
+                .then(boats => {
+                    const fleetBounds = findFleetBounds(boats.map(boat => boat.positions).flat());
+                    map.fitBounds(fleetBounds, { padding: [20, 20] });
+
+                    try {
+                        boats.forEach((boat, index) => {
+                            const polyline = L.polyline(
+                                boat.positions.map(pos => L.latLng(pos.lat, pos.lon)),
+                                {
+                                    color: getColorFromId(index),
+                                    weight: 1.6,
+                                },
+                            ).addTo(map);
+
+                            lines.push(polyline);
+
+                            const svgIcon = `
+                                <svg width="100%" height="100%" viewBox="0 0 14 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;">
+                                    <path d="M4.784,13.635c0,0 -0.106,-2.924 0.006,-4.379c0.115,-1.502 0.318,-3.151 0.686,-4.632c0.163,-0.654 0.45,-1.623 0.755,-2.44c0.202,-0.54 0.407,-1.021 0.554,-1.352c0.038,-0.085 0.122,-0.139 0.215,-0.139c0.092,0 0.176,0.054 0.214,0.139c0.151,0.342 0.361,0.835 0.555,1.352c0.305,0.817 0.592,1.786 0.755,2.44c0.368,1.481 0.571,3.13 0.686,4.632c0.112,1.455 0.006,4.379 0.006,4.379l-4.432,0Z" style="fill:${getColorFromId(
+                                        index,
+                                    )};" />
+                                    <path d="M4.784,13.635c0,0 -0.106,-2.924 0.006,-4.379c0.115,-1.502 0.318,-3.151 0.686,-4.632c0.163,-0.654 0.45,-1.623 0.755,-2.44c0.202,-0.54 0.407,-1.021 0.554,-1.352c0.038,-0.085 0.122,-0.139 0.215,-0.139c0.092,0 0.176,0.054 0.214,0.139c0.151,0.342 0.361,0.835 0.555,1.352c0.305,0.817 0.592,1.786 0.755,2.44c0.368,1.481 0.571,3.13 0.686,4.632c0.112,1.455 0.006,4.379 0.006,4.379l-4.432,0Z" style="fill:rgb(0,0,0);fill-opacity:0.55;" />
+                                    <path d="M5.481,12.731c0,0 -0.073,-3.048 0.003,-4.22c0.06,-0.909 0.886,-3.522 1.293,-4.764c0.03,-0.098 0.121,-0.165 0.223,-0.165c0.103,0 0.193,0.067 0.224,0.164c0.406,1.243 1.232,3.856 1.292,4.765c0.076,1.172 0.003,4.22 0.003,4.22l-3.038,0Z" style="fill:${getColorFromId(
+                                        index,
+                                    )};" />
+                                </svg>
+                            `;
+
+                            const boatIcon = L.divIcon({
+                                className: 'no-border',
+                                iconSize: [30, 30],
+                                iconAnchor: [15, 15],
+                                popupAnchor: [0, -16],
+                                tooltipAnchor: [16, 0],
+                                html: svgIcon,
+                            });
+
+                            const last = boat.positions[boat.positions.length - 1];
+                            const marker = L.marker(L.latLng(last.lat, last.lon), {
+                                rotationAngle: last.cog,
+                                rotationOrigin: 'center',
+                                icon: boatIcon,
+                            }).addTo(map);
+
+                            markers.push(marker);
+
+                            const popup = L.popup().setContent(
+                                `<div class="popup">
+                                    <h3>${boat.name}</h3>
+                                    <h3>${boat.skipper_name}</h3>
+                                    <h3>${boat.category_name}</h3>
+                                    <h3>${last.sog}kts @ ${last.cog}°</h3>
+                                </div>`,
+                            );
+
+                            const tooltip = L.tooltip().setContent(
+                                `<div class="popup">
+                                    <h3>${boat.name}</h3>
+                                    <h3>${boat.skipper_name}</h3>
+                                    <h3>${boat.category_name}</h3>
+                                    <h3>${last.sog}kts @ ${last.cog}°</h3>
+                                </div>`,
+                            );
+
+                            marker.bindPopup(popup);
+
+                            if (!onTouchDevice) {
+                                marker.bindTooltip(tooltip);
+                                polyline.bindTooltip(tooltip);
+                            }
+
+                            polyline.on('click', () => marker.openPopup());
+                        });
+                    } catch (error) {
+                        console.error(`Error querying boats: ${error.message}`);
+                    }
+                })
+                .catch(error => {
+                    console.error(`Error querying boats: ${error.message}`);
+                });
+        };
+
+        const remove = () => {
+            markers.forEach(l => map.removeLayer(l));
+            lines.forEach(l => map.removeLayer(l));
+            markers = [];
+            lines = [];
+        };
+
+        let hasHooks = false;
+
+        this.onopen = () => {
+            if (hasHooks) {
+                return;
+            }
+
+            load();
+
+            hasHooks = true;
+        };
+
+        this.onclose = () => {
+            if (!hasHooks) {
+                return;
+            }
+
+            remove();
+            hasHooks = false;
+        };
     </script>
 </plugin>
